--- a/test_cases/valid/1.properties
+++ b/test_cases/valid/1.properties
@@ -23,3 +23,11 @@ path=c:\\wiki\\templates
 # However, some editors will handle this automatically
 another-key value
 is_this_valid = =fefalfejafe: feijfeia #this is now a comment!
+# Escape handling in values (Java-style)
+esc_colon = foo\:bar
+esc_equals = foo\=bar
+esc_space = foo\ bar
+esc_tab = foo\tbar
+esc_hash = foo\#bar
+esc_bang = foo\!bar
+mixed_escapes = a\ =b\:\t\#\!
